generated/SimplePLSQLParser.py
# Generated from grammer/SimplePLSQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimplePLSQLParser ( Parser ):

    grammarFileName = "SimplePLSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'OF'", "'REF'", "'*'", "'/'", 
                     "'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'='", 
                     "'<>'", "'%'", "'ROWTYPE'", "'PROCEDURE'", "'FUNCTION'", 
                     "'IN'", "'OUT'", "'RETURN'", "'SELECT'", "'INTO'", 
                     "'FROM'", "'WHERE'", "'FOR'", "'LOOP'", "'EXIT'", "'NULL'", 
                     "'BEGIN'", "'DECLARE'", "'END'", "'IF'", "'THEN'", 
                     "'ELSE'", "'WHILE'", "'AND'", "'OR'", "'NOT'", "'IS'", 
                     "'CONSTANT'", "'DEFAULT'", "'TYPE'", "'RECORD'", "'VARRAY'", 
                     "'TABLE'", "'INDEX'", "'BY'", "'PLS_INTEGER'", "'BINARY_INTEGER'", 
                     "'CURSOR'", "'PRAGMA'", "'NUMBER'", "'VARCHAR2'", "'CHAR'", 
                     "'DATE'", "'BOOLEAN'", "'INTEGER'", "':='", "';'", 
                     "','", "'.'", "'..'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROCEDURE", "FUNCTION", "IN", "OUT", "RETURN", "SELECT", 
                      "INTO", "FROM", "WHERE", "FOR", "LOOP", "EXIT", "NULL_STMT", 
                      "BEGIN", "DECLARE", "END", "IF", "THEN", "ELSE", "WHILE", 
                      "AND", "OR", "NOT", "IS", "CONSTANT", "DEFAULT", "TYPE", 
                      "RECORD", "VARRAY", "TABLE", "INDEX", "BY", "PLS_INTEGER", 
                      "BINARY_INTEGER", "CURSOR", "PRAGMA", "NUMBER", "VARCHAR2", 
                      "CHAR", "DATE", "BOOLEAN", "INTEGER", "ASSIGN", "SEMI", 
                      "COMMA", "DOT", "RANGE", "LPAREN", "RPAREN", "ID", 
                      "INT", "SCRIPT_TERMINATOR", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_unit = 1
    RULE_proc_decl = 2
    RULE_param_list = 3
    RULE_param = 4
    RULE_proc_body = 5
    RULE_block = 6
    RULE_decl_list = 7
    RULE_decl = 8
    RULE_constant_modifier = 9
    RULE_not_null = 10
    RULE_init = 11
    RULE_type_decl = 12
    RULE_record_type_body = 13
    RULE_record_fields = 14
    RULE_field = 15
    RULE_collection_type_body = 16
    RULE_ref_cursor_body = 17
    RULE_cursor_decl = 18
    RULE_cursor_params = 19
    RULE_cursor_select = 20
    RULE_select_list = 21
    RULE_pragma_stmt = 22
    RULE_stmt_list = 23
    RULE_statement = 24
    RULE_assignment = 25
    RULE_target = 26
    RULE_if_stmt = 27
    RULE_while_stmt = 28
    RULE_for_stmt = 29
    RULE_expr_range = 30
    RULE_func_call = 31
    RULE_proc_call = 32
    RULE_select_into = 33
    RULE_return_stmt = 34
    RULE_exit_stmt = 35
    RULE_empty_stmt = 36
    RULE_expr = 37
    RULE_type_spec = 38
    RULE_simple_type = 39
    RULE_numeric_type = 40
    RULE_char_type = 41
    RULE_pct_attr = 42
    RULE_qualified_name = 43

    ruleNames =  [ "program", "unit", "proc_decl", "param_list", "param", 
                   "proc_body", "block", "decl_list", "decl", "constant_modifier", 
                   "not_null", "init", "type_decl", "record_type_body", 
                   "record_fields", "field", "collection_type_body", "ref_cursor_body", 
                   "cursor_decl", "cursor_params", "cursor_select", "select_list", 
                   "pragma_stmt", "stmt_list", "statement", "assignment", 
                   "target", "if_stmt", "while_stmt", "for_stmt", "expr_range", 
                   "func_call", "proc_call", "select_into", "return_stmt", 
                   "exit_stmt", "empty_stmt", "expr", "type_spec", "simple_type", 
                   "numeric_type", "char_type", "pct_attr", "qualified_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    PROCEDURE=16
    FUNCTION=17
    IN=18
    OUT=19
    RETURN=20
    SELECT=21
    INTO=22
    FROM=23
    WHERE=24
    FOR=25
    LOOP=26
    EXIT=27
    NULL_STMT=28
    BEGIN=29
    DECLARE=30
    END=31
    IF=32
    THEN=33
    ELSE=34
    WHILE=35
    AND=36
    OR=37
    NOT=38
    IS=39
    CONSTANT=40
    DEFAULT=41
    TYPE=42
    RECORD=43
    VARRAY=44
    TABLE=45
    INDEX=46
    BY=47
    PLS_INTEGER=48
    BINARY_INTEGER=49
    CURSOR=50
    PRAGMA=51
    NUMBER=52
    VARCHAR2=53
    CHAR=54
    DATE=55
    BOOLEAN=56
    INTEGER=57
    ASSIGN=58
    SEMI=59
    COMMA=60
    DOT=61
    RANGE=62
    LPAREN=63
    RPAREN=64
    ID=65
    INT=66
    SCRIPT_TERMINATOR=67
    WS=68
    COMMENT=69
    BLOCK_COMMENT=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimplePLSQLParser.EOF, 0)

        def unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePLSQLParser.UnitContext)
            else:
                return self.getTypedRuleContext(SimplePLSQLParser.UnitContext,i)


        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimplePLSQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 16)) & ~0x3f) == 0 and ((1 << (_la - 16)) & 563001560758835) != 0):
                self.state = 88
                self.unit()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(SimplePLSQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proc_decl(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Proc_declContext,0)


        def type_decl(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Type_declContext,0)


        def cursor_decl(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Cursor_declContext,0)


        def pragma_stmt(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Pragma_stmtContext,0)


        def block(self):
            return self.getTypedRuleContext(SimplePLSQLParser.BlockContext,0)


        def statement(self):
            return self.getTypedRuleContext(SimplePLSQLParser.StatementContext,0)


        def SEMI(self):
            return self.getToken(SimplePLSQLParser.SEMI, 0)

        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = SimplePLSQLParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unit)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.proc_decl()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.type_decl()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.cursor_decl()
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.pragma_stmt()
                pass
            elif token in [29, 30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.block()
                pass
            elif token in [20, 21, 25, 27, 28, 32, 35, 65]:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.statement()
                self.state = 102
                self.match(SimplePLSQLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimplePLSQLParser.ID)
            else:
                return self.getToken(SimplePLSQLParser.ID, i)

        def IS(self):
            return self.getToken(SimplePLSQLParser.IS, 0)

        def proc_body(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Proc_bodyContext,0)


        def PROCEDURE(self):
            return self.getToken(SimplePLSQLParser.PROCEDURE, 0)

        def FUNCTION(self):
            return self.getToken(SimplePLSQLParser.FUNCTION, 0)

        def param_list(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Param_listContext,0)


        def RETURN(self):
            return self.getToken(SimplePLSQLParser.RETURN, 0)

        def type_spec(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Type_specContext,0)


        def SEMI(self):
            return self.getToken(SimplePLSQLParser.SEMI, 0)

        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_proc_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc_decl" ):
                listener.enterProc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc_decl" ):
                listener.exitProc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc_decl" ):
                return visitor.visitProc_decl(self)
            else:
                return visitor.visitChildren(self)




    def proc_decl(self):

        localctx = SimplePLSQLParser.Proc_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_proc_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 107
            self.match(SimplePLSQLParser.ID)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==63:
                self.state = 108
                self.param_list()


            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 111
                self.match(SimplePLSQLParser.RETURN)
                self.state = 112
                self.type_spec()


            self.state = 115
            self.match(SimplePLSQLParser.IS)
            self.state = 116
            self.proc_body()
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 117
                self.match(SimplePLSQLParser.ID)


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==59:
                self.state = 120
                self.match(SimplePLSQLParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(SimplePLSQLParser.LPAREN, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePLSQLParser.ParamContext)
            else:
                return self.getTypedRuleContext(SimplePLSQLParser.ParamContext,i)


        def RPAREN(self):
            return self.getToken(SimplePLSQLParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimplePLSQLParser.COMMA)
            else:
                return self.getToken(SimplePLSQLParser.COMMA, i)

        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = SimplePLSQLParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(SimplePLSQLParser.LPAREN)
            self.state = 124
            self.param()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==60:
                self.state = 125
                self.match(SimplePLSQLParser.COMMA)
                self.state = 126
                self.param()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(SimplePLSQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplePLSQLParser.ID, 0)

        def IN(self):
            return self.getToken(SimplePLSQLParser.IN, 0)

        def OUT(self):
            return self.getToken(SimplePLSQLParser.OUT, 0)

        def type_spec(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Type_specContext,0)


        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SimplePLSQLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(SimplePLSQLParser.ID)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(SimplePLSQLParser.IN)

            elif la_ == 2:
                self.state = 136
                self.match(SimplePLSQLParser.OUT)

            elif la_ == 3:
                self.state = 137
                self.match(SimplePLSQLParser.IN)
                self.state = 138
                self.match(SimplePLSQLParser.OUT)


            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 52)) & ~0x3f) == 0 and ((1 << (_la - 52)) & 8255) != 0):
                self.state = 141
                self.type_spec()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SimplePLSQLParser.BEGIN, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Stmt_listContext,0)


        def END(self):
            return self.getToken(SimplePLSQLParser.END, 0)

        def DECLARE(self):
            return self.getToken(SimplePLSQLParser.DECLARE, 0)

        def decl_list(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Decl_listContext,0)


        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_proc_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc_body" ):
                listener.enterProc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc_body" ):
                listener.exitProc_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc_body" ):
                return visitor.visitProc_body(self)
            else:
                return visitor.visitChildren(self)




    def proc_body(self):

        localctx = SimplePLSQLParser.Proc_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_proc_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 144
                self.match(SimplePLSQLParser.DECLARE)
                self.state = 145
                self.decl_list()


            self.state = 148
            self.match(SimplePLSQLParser.BEGIN)
            self.state = 149
            self.stmt_list()
            self.state = 150
            self.match(SimplePLSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proc_body(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Proc_bodyContext,0)


        def SEMI(self):
            return self.getToken(SimplePLSQLParser.SEMI, 0)

        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SimplePLSQLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.proc_body()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==59:
                self.state = 153
                self.match(SimplePLSQLParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePLSQLParser.DeclContext)
            else:
                return self.getTypedRuleContext(SimplePLSQLParser.DeclContext,i)


        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_list" ):
                listener.enterDecl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_list" ):
                listener.exitDecl_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_list" ):
                return visitor.visitDecl_list(self)
            else:
                return visitor.visitChildren(self)




    def decl_list(self):

        localctx = SimplePLSQLParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.decl()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==65:
                self.state = 157
                self.decl()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimplePLSQLParser.ID, 0)

        def init(self):
            return self.getTypedRuleContext(SimplePLSQLParser.InitContext,0)


        def SEMI(self):
            return self.getToken(SimplePLSQLParser.SEMI, 0)

        def type_spec(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Type_specContext,0)


        def constant_modifier(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Constant_modifierContext,0)


        def not_null(self):
            return self.getTypedRuleContext(SimplePLSQLParser.Not_nullContext,0)


        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = SimplePLSQLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(SimplePLSQLParser.ID)
                self.state = 164
                self.init()
                self.state = 165
                self.match(SimplePLSQLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(SimplePLSQLParser.ID)
                self.state = 168
                self.match(SimplePLSQLParser.T__0)
                self.state = 169
                self.type_spec()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40:
                    self.state = 170
                    self.constant_modifier()


                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==38:
                    self.state = 173
                    self.not_null()


                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==41 or _la==58:
                    self.state = 176
                    self.init()


                self.state = 179
                self.match(SimplePLSQLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_modifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(SimplePLSQLParser.CONSTANT, 0)

        def getRuleIndex(self):
            return SimplePLSQLParser.RULE_constant_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant_modifier" ):
                listener.enterConstant_modifier(self)
